--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class ="container">
+<body class="container">
 
 <header th:replace="fragments :: header"></header>
-<table class="'table table-striped">
+
+<table class="table table-striped">
     <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Description</th>
-        </tr>
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Contact Email</th>
+    </tr>
     </thead>
     <tr th:each="event : ${events}">
         <td th:text="${event.id}"></td>
         <td th:text="${event.name}"></td>
         <td th:text="${event.description}"></td>
-        <td>
-            <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
-        </td>
+        <td th:text="${event.contactEmail}"></td>
     </tr>
 </table>
-
-<!--<ul>-->
-<!--    <th:block th:each="event : ${events}">-->
-<!--        <li th:text="${event.name}"></li>-->
-<!--    </th:block>-->
-<!--</ul>-->
 
 </body>
 </html>
