--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -8,19 +8,12 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Contact Email</th>
-            <th>Type</th>
+            <th>Category Name</th>
         </tr>
     </thead>
-    <tr th:each="event : ${events}">
-        <td th:text="${event.id}"></td>
-        <td th:text="${event.name}"></td>
-        <td th:text="${event.description}"></td>
-        <td th:text="${event.contactEmail}"></td>
-        <td th:text="${event.type.displayName}"></td>
+    <tr th:each="category : ${categories}">
+        <td th:text="${category.name}"></td>
+
     </tr>
 </table>
 
